# inspect-evals-speedtest

./: .gitignore  README.md  plot_speedtest_data.py  pyproject.toml  run_speedtest.py
logs/: 2025-09-10T18-22-10+01-00_gpqa-diamond_D3bQVgBfuJbxjkXVgWbw9T.eval
src/inspect_evals_speedtest/: config.py  gpqa.py  utils.py
