[project]
name = "inspect-evals-speedtest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["inspect-ai>=0.3.131", "loguru>=0.7.3", "openai>=1.107.1", "pandas>=2.3.2", "matplotlib>=3.10.6", "seaborn>=0.13.2", "ipykernel>=6.30.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
